fix: issue with wrapping tag for angular components (#571)

--- a/packages/components/src/styles/db-ui-components.scss
+++ b/packages/components/src/styles/db-ui-components.scss
@@ -14,3 +14,22 @@
 @use "../components/section/section" as *;
 @use "../components/infotext/infotext" as *;
 @use "../components/alert/alert" as *;
+
+// angular-workaround
+dbalert,
+dbbrand,
+dbbutton,
+dbcard,
+dbdivider,
+dbdrawer,
+dbheader,
+dbicon,
+dbinfotext,
+dbinput,
+dblink,
+dbpage,
+dbsection,
+dbtab,
+dbtabbar {
+	display: contents;
+}
